#9 undid edit of TODO comment

--- a/docs/api-reference/CRMScript.Event.Trigger.yml
+++ b/docs/api-reference/CRMScript.Event.Trigger.yml
@@ -107,7 +107,7 @@ items:
   nameWithType: Trigger
   fullName: CRMScript.Event.Trigger
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.Event.Trigger.ChatAfterSaveNewMessage()
   commentId: M:CRMScript.Event.Trigger.ChatAfterSaveNewMessage()
@@ -1049,8 +1049,7 @@ items:
   nameWithType: Trigger.ServiceScreenForwardLoad()
   fullName: CRMScript.Event.Trigger.ServiceScreenForwardLoad()
   type: Method
-  summary: "\nRuns for<code>HtmlPage.forward</code>event.
-Called when screen is constructed, useful for setting default values into HTML elements.\n"
+  summary: "\nRuns for<code>HtmlPage.forward</code>event. Called when screen is constructed, useful for setting default values into HTML elements.\n"
   remarks: 
   syntax: 
   example: 
