--- a/docs/api-reference/CRMScript.Native.Timer.yml
+++ b/docs/api-reference/CRMScript.Native.Timer.yml
@@ -16,7 +16,7 @@ items:
   nameWithType: Timer
   fullName: CRMScript.Native.Timer
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
   - "\n<pre><code>Timer timer;\ntimer.start();\n\n// code you want to time\n\ntimer.stop();\nFloat timeTaken = timer.getSeconds();</code></pre>\n"
 - uid: CRMScript.Native.Timer.#ctor
