--- a/docs/api-reference/CRMScript.NetServer.NSArchiveListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveListItem.yml
@@ -21,7 +21,7 @@ items:
   nameWithType: NSArchiveListItem
   fullName: CRMScript.NetServer.NSArchiveListItem
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSArchiveListItem.#ctor
   commentId: M:CRMScript.NetServer.NSArchiveListItem.#ctor
