--- a/docs/api-reference/CRMScript.NetServer.NSCarrier.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCarrier.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSCarrier
   fullName: CRMScript.NetServer.NSCarrier
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSCarrier.#ctor
   commentId: M:CRMScript.NetServer.NSCarrier.#ctor
