--- a/docs/api-reference/CRMScript.NetServer.NSDSAParameters.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDSAParameters.yml
@@ -26,7 +26,7 @@ items:
   nameWithType: NSDSAParameters
   fullName: CRMScript.NetServer.NSDSAParameters
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSDSAParameters.#ctor
   commentId: M:CRMScript.NetServer.NSDSAParameters.#ctor
