--- a/docs/api-reference/CRMScript.NetServer.NSDocumentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentEntity.yml
@@ -79,7 +79,7 @@ items:
   nameWithType: NSDocumentEntity
   fullName: CRMScript.NetServer.NSDocumentEntity
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSDocumentEntity.#ctor
   commentId: M:CRMScript.NetServer.NSDocumentEntity.#ctor
