--- a/docs/api-reference/CRMScript.NetServer.NSExportArchiveResult.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSExportArchiveResult.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSExportArchiveResult
   fullName: CRMScript.NetServer.NSExportArchiveResult
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSExportArchiveResult.#ctor
   commentId: M:CRMScript.NetServer.NSExportArchiveResult.#ctor
