--- a/docs/api-reference/CRMScript.NetServer.NSExtendedLicenseInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSExtendedLicenseInfo.yml
@@ -23,7 +23,7 @@ items:
   nameWithType: NSExtendedLicenseInfo
   fullName: CRMScript.NetServer.NSExtendedLicenseInfo
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSExtendedLicenseInfo.#ctor
   commentId: M:CRMScript.NetServer.NSExtendedLicenseInfo.#ctor
