--- a/docs/api-reference/CRMScript.NetServer.NSExtendedModuleLicense.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSExtendedModuleLicense.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSExtendedModuleLicense
   fullName: CRMScript.NetServer.NSExtendedModuleLicense
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSExtendedModuleLicense.#ctor
   commentId: M:CRMScript.NetServer.NSExtendedModuleLicense.#ctor
