--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoListText.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoListText.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSFieldInfoListText
   fullName: CRMScript.NetServer.NSFieldInfoListText
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSFieldInfoListText.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoListText.#ctor
