--- a/docs/api-reference/CRMScript.NetServer.NSFieldProperty.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldProperty.yml
@@ -21,7 +21,7 @@ items:
   nameWithType: NSFieldProperty
   fullName: CRMScript.NetServer.NSFieldProperty
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSFieldProperty.#ctor
   commentId: M:CRMScript.NetServer.NSFieldProperty.#ctor
