--- a/docs/api-reference/CRMScript.NetServer.NSFieldRight.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldRight.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSFieldRight
   fullName: CRMScript.NetServer.NSFieldRight
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSFieldRight.#ctor
   commentId: M:CRMScript.NetServer.NSFieldRight.#ctor
