--- a/docs/api-reference/CRMScript.NetServer.NSGrantedModuleLicense.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSGrantedModuleLicense.yml
@@ -41,7 +41,7 @@ items:
   nameWithType: NSGrantedModuleLicense
   fullName: CRMScript.NetServer.NSGrantedModuleLicense
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSGrantedModuleLicense.#ctor
   commentId: M:CRMScript.NetServer.NSGrantedModuleLicense.#ctor
