--- a/docs/api-reference/CRMScript.NetServer.NSHierarchyEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSHierarchyEntity.yml
@@ -31,7 +31,7 @@ items:
   nameWithType: NSHierarchyEntity
   fullName: CRMScript.NetServer.NSHierarchyEntity
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSHierarchyEntity.#ctor
   commentId: M:CRMScript.NetServer.NSHierarchyEntity.#ctor
