--- a/docs/api-reference/CRMScript.NetServer.NSImage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSImage.yml
@@ -13,7 +13,7 @@ items:
   nameWithType: NSImage
   fullName: CRMScript.NetServer.NSImage
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSImage.#ctor
   commentId: M:CRMScript.NetServer.NSImage.#ctor
