--- a/docs/api-reference/CRMScript.NetServer.NSKbCategory.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSKbCategory.yml
@@ -23,7 +23,7 @@ items:
   nameWithType: NSKbCategory
   fullName: CRMScript.NetServer.NSKbCategory
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSKbCategory.#ctor
   commentId: M:CRMScript.NetServer.NSKbCategory.#ctor
