--- a/docs/api-reference/CRMScript.NetServer.NSListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSListItem.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSListItem
   fullName: CRMScript.NetServer.NSListItem
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSListItem.#ctor
   commentId: M:CRMScript.NetServer.NSListItem.#ctor
