--- a/docs/api-reference/CRMScript.NetServer.NSLocalizedText.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSLocalizedText.yml
@@ -23,7 +23,7 @@ items:
   nameWithType: NSLocalizedText
   fullName: CRMScript.NetServer.NSLocalizedText
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSLocalizedText.#ctor
   commentId: M:CRMScript.NetServer.NSLocalizedText.#ctor
