--- a/docs/api-reference/CRMScript.NetServer.NSMrMrs.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMrMrs.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSMrMrs
   fullName: CRMScript.NetServer.NSMrMrs
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSMrMrs.#ctor
   commentId: M:CRMScript.NetServer.NSMrMrs.#ctor
