--- a/docs/api-reference/CRMScript.NetServer.NSPhoneListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPhoneListItem.yml
@@ -31,7 +31,7 @@ items:
   nameWithType: NSPhoneListItem
   fullName: CRMScript.NetServer.NSPhoneListItem
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSPhoneListItem.#ctor
   commentId: M:CRMScript.NetServer.NSPhoneListItem.#ctor
