--- a/docs/api-reference/CRMScript.NetServer.NSPreviewMailing.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreviewMailing.yml
@@ -41,7 +41,7 @@ items:
   nameWithType: NSPreviewMailing
   fullName: CRMScript.NetServer.NSPreviewMailing
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSPreviewMailing.#ctor
   commentId: M:CRMScript.NetServer.NSPreviewMailing.#ctor
