--- a/docs/api-reference/CRMScript.NetServer.NSPreviewMailingHeader.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreviewMailingHeader.yml
@@ -41,7 +41,7 @@ items:
   nameWithType: NSPreviewMailingHeader
   fullName: CRMScript.NetServer.NSPreviewMailingHeader
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSPreviewMailingHeader.#ctor
   commentId: M:CRMScript.NetServer.NSPreviewMailingHeader.#ctor
