--- a/docs/api-reference/CRMScript.NetServer.NSQuickReply.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuickReply.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSQuickReply
   fullName: CRMScript.NetServer.NSQuickReply
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSQuickReply.#ctor
   commentId: M:CRMScript.NetServer.NSQuickReply.#ctor
