--- a/docs/api-reference/CRMScript.NetServer.NSRecurrenceDate.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRecurrenceDate.yml
@@ -21,7 +21,7 @@ items:
   nameWithType: NSRecurrenceDate
   fullName: CRMScript.NetServer.NSRecurrenceDate
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceDate.#ctor
   commentId: M:CRMScript.NetServer.NSRecurrenceDate.#ctor
