--- a/docs/api-reference/CRMScript.NetServer.NSRecurrenceDayPattern.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRecurrenceDayPattern.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSRecurrenceDayPattern
   fullName: CRMScript.NetServer.NSRecurrenceDayPattern
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceDayPattern.#ctor
   commentId: M:CRMScript.NetServer.NSRecurrenceDayPattern.#ctor
