--- a/docs/api-reference/CRMScript.NetServer.NSRecurrenceInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRecurrenceInfo.yml
@@ -35,7 +35,7 @@ items:
   nameWithType: NSRecurrenceInfo
   fullName: CRMScript.NetServer.NSRecurrenceInfo
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceInfo.#ctor
   commentId: M:CRMScript.NetServer.NSRecurrenceInfo.#ctor
