--- a/docs/api-reference/CRMScript.NetServer.NSRecurrenceMonthPattern.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRecurrenceMonthPattern.yml
@@ -21,7 +21,7 @@ items:
   nameWithType: NSRecurrenceMonthPattern
   fullName: CRMScript.NetServer.NSRecurrenceMonthPattern
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceMonthPattern.#ctor
   commentId: M:CRMScript.NetServer.NSRecurrenceMonthPattern.#ctor
