--- a/docs/api-reference/CRMScript.NetServer.NSRecurrenceWeekPattern.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRecurrenceWeekPattern.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSRecurrenceWeekPattern
   fullName: CRMScript.NetServer.NSRecurrenceWeekPattern
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceWeekPattern.#ctor
   commentId: M:CRMScript.NetServer.NSRecurrenceWeekPattern.#ctor
