--- a/docs/api-reference/CRMScript.NetServer.NSRecurrenceYearPattern.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRecurrenceYearPattern.yml
@@ -21,7 +21,7 @@ items:
   nameWithType: NSRecurrenceYearPattern
   fullName: CRMScript.NetServer.NSRecurrenceYearPattern
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceYearPattern.#ctor
   commentId: M:CRMScript.NetServer.NSRecurrenceYearPattern.#ctor
