--- a/docs/api-reference/CRMScript.NetServer.NSReportEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReportEntity.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSReportEntity
   fullName: CRMScript.NetServer.NSReportEntity
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSReportEntity.#ctor
   commentId: M:CRMScript.NetServer.NSReportEntity.#ctor
