--- a/docs/api-reference/CRMScript.NetServer.NSReportLabelLayoutEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReportLabelLayoutEntity.yml
@@ -35,7 +35,7 @@ items:
   nameWithType: NSReportLabelLayoutEntity
   fullName: CRMScript.NetServer.NSReportLabelLayoutEntity
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSReportLabelLayoutEntity.#ctor
   commentId: M:CRMScript.NetServer.NSReportLabelLayoutEntity.#ctor
