--- a/docs/api-reference/CRMScript.NetServer.NSSale.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSale.yml
@@ -61,7 +61,7 @@ items:
   nameWithType: NSSale
   fullName: CRMScript.NetServer.NSSale
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSale.#ctor
   commentId: M:CRMScript.NetServer.NSSale.#ctor
