--- a/docs/api-reference/CRMScript.NetServer.NSSaleSummary.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleSummary.yml
@@ -67,7 +67,7 @@ items:
   nameWithType: NSSaleSummary
   fullName: CRMScript.NetServer.NSSaleSummary
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSaleSummary.#ctor
   commentId: M:CRMScript.NetServer.NSSaleSummary.#ctor
