--- a/docs/api-reference/CRMScript.NetServer.NSSaleType.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleType.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSSaleType
   fullName: CRMScript.NetServer.NSSaleType
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSaleType.#ctor
   commentId: M:CRMScript.NetServer.NSSaleType.#ctor
