--- a/docs/api-reference/CRMScript.NetServer.NSSaleTypeEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleTypeEntity.yml
@@ -55,7 +55,7 @@ items:
   nameWithType: NSSaleTypeEntity
   fullName: CRMScript.NetServer.NSSaleTypeEntity
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSaleTypeEntity.#ctor
   commentId: M:CRMScript.NetServer.NSSaleTypeEntity.#ctor
