--- a/docs/api-reference/CRMScript.NetServer.NSSaleTypeStageLink.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleTypeStageLink.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSSaleTypeStageLink
   fullName: CRMScript.NetServer.NSSaleTypeStageLink
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSaleTypeStageLink.#ctor
   commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.#ctor
