--- a/docs/api-reference/CRMScript.NetServer.NSSalesActivity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSalesActivity.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSSalesActivity
   fullName: CRMScript.NetServer.NSSalesActivity
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSalesActivity.#ctor
   commentId: M:CRMScript.NetServer.NSSalesActivity.#ctor
