--- a/docs/api-reference/CRMScript.NetServer.NSSatellite.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSatellite.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSSatellite
   fullName: CRMScript.NetServer.NSSatellite
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSatellite.#ctor
   commentId: M:CRMScript.NetServer.NSSatellite.#ctor
