--- a/docs/api-reference/CRMScript.NetServer.NSSelectableMDOListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSelectableMDOListItem.yml
@@ -41,7 +41,7 @@ items:
   nameWithType: NSSelectableMDOListItem
   fullName: CRMScript.NetServer.NSSelectableMDOListItem
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSelectableMDOListItem.#ctor
   commentId: M:CRMScript.NetServer.NSSelectableMDOListItem.#ctor
