--- a/docs/api-reference/CRMScript.NetServer.NSSelectionEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSelectionEntity.yml
@@ -91,7 +91,7 @@ items:
   nameWithType: NSSelectionEntity
   fullName: CRMScript.NetServer.NSSelectionEntity
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSelectionEntity.#ctor
   commentId: M:CRMScript.NetServer.NSSelectionEntity.#ctor
