--- a/docs/api-reference/CRMScript.NetServer.NSSelectionForFind.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSelectionForFind.yml
@@ -23,7 +23,7 @@ items:
   nameWithType: NSSelectionForFind
   fullName: CRMScript.NetServer.NSSelectionForFind
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSelectionForFind.#ctor
   commentId: M:CRMScript.NetServer.NSSelectionForFind.#ctor
