--- a/docs/api-reference/CRMScript.NetServer.NSShipmentMessageBlockEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSShipmentMessageBlockEntity.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSShipmentMessageBlockEntity
   fullName: CRMScript.NetServer.NSShipmentMessageBlockEntity
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSShipmentMessageBlockEntity.#ctor
   commentId: M:CRMScript.NetServer.NSShipmentMessageBlockEntity.#ctor
