--- a/docs/api-reference/CRMScript.NetServer.NSSoPrincipalCarrier.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSoPrincipalCarrier.yml
@@ -63,7 +63,7 @@ items:
   nameWithType: NSSoPrincipalCarrier
   fullName: CRMScript.NetServer.NSSoPrincipalCarrier
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.#ctor
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.#ctor
