--- a/docs/api-reference/CRMScript.NetServer.NSSoSystemInfoCarrier.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSoSystemInfoCarrier.yml
@@ -51,7 +51,7 @@ items:
   nameWithType: NSSoSystemInfoCarrier
   fullName: CRMScript.NetServer.NSSoSystemInfoCarrier
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSoSystemInfoCarrier.#ctor
   commentId: M:CRMScript.NetServer.NSSoSystemInfoCarrier.#ctor
