--- a/docs/api-reference/CRMScript.NetServer.NSStream.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSStream.yml
@@ -13,7 +13,7 @@ items:
   nameWithType: NSStream
   fullName: CRMScript.NetServer.NSStream
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSStream.#ctor
   commentId: M:CRMScript.NetServer.NSStream.#ctor
