--- a/docs/api-reference/CRMScript.NetServer.NSSuggestedAppointment.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSuggestedAppointment.yml
@@ -39,7 +39,7 @@ items:
   nameWithType: NSSuggestedAppointment
   fullName: CRMScript.NetServer.NSSuggestedAppointment
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSuggestedAppointment.#ctor
   commentId: M:CRMScript.NetServer.NSSuggestedAppointment.#ctor
