--- a/docs/api-reference/CRMScript.NetServer.NSSuggestedAppointmentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSuggestedAppointmentEntity.yml
@@ -39,7 +39,7 @@ items:
   nameWithType: NSSuggestedAppointmentEntity
   fullName: CRMScript.NetServer.NSSuggestedAppointmentEntity
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSuggestedAppointmentEntity.#ctor
   commentId: M:CRMScript.NetServer.NSSuggestedAppointmentEntity.#ctor
