--- a/docs/api-reference/CRMScript.NetServer.NSSuggestedDocumentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSuggestedDocumentEntity.yml
@@ -33,7 +33,7 @@ items:
   nameWithType: NSSuggestedDocumentEntity
   fullName: CRMScript.NetServer.NSSuggestedDocumentEntity
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSuggestedDocumentEntity.#ctor
   commentId: M:CRMScript.NetServer.NSSuggestedDocumentEntity.#ctor
