--- a/docs/api-reference/CRMScript.NetServer.NSTabOrder.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTabOrder.yml
@@ -19,7 +19,7 @@ items:
   nameWithType: NSTabOrder
   fullName: CRMScript.NetServer.NSTabOrder
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSTabOrder.#ctor
   commentId: M:CRMScript.NetServer.NSTabOrder.#ctor
