--- a/docs/api-reference/CRMScript.NetServer.NSTableRight.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTableRight.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSTableRight
   fullName: CRMScript.NetServer.NSTableRight
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSTableRight.#ctor
   commentId: M:CRMScript.NetServer.NSTableRight.#ctor
