--- a/docs/api-reference/CRMScript.NetServer.NSTaskListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTaskListItem.yml
@@ -37,7 +37,7 @@ items:
   nameWithType: NSTaskListItem
   fullName: CRMScript.NetServer.NSTaskListItem
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSTaskListItem.#ctor
   commentId: M:CRMScript.NetServer.NSTaskListItem.#ctor
