--- a/docs/api-reference/CRMScript.NetServer.NSTicket.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicket.yml
@@ -109,7 +109,7 @@ items:
   nameWithType: NSTicket
   fullName: CRMScript.NetServer.NSTicket
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSTicket.#ctor
   commentId: M:CRMScript.NetServer.NSTicket.#ctor
