--- a/docs/api-reference/CRMScript.NetServer.NSTicketPriority.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketPriority.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSTicketPriority
   fullName: CRMScript.NetServer.NSTicketPriority
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSTicketPriority.#ctor
   commentId: M:CRMScript.NetServer.NSTicketPriority.#ctor
