--- a/docs/api-reference/CRMScript.NetServer.NSTokenManagementInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTokenManagementInfo.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSTokenManagementInfo
   fullName: CRMScript.NetServer.NSTokenManagementInfo
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSTokenManagementInfo.#ctor
   commentId: M:CRMScript.NetServer.NSTokenManagementInfo.#ctor
