--- a/docs/api-reference/CRMScript.NetServer.NSTypicalSearch.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTypicalSearch.yml
@@ -29,7 +29,7 @@ items:
   nameWithType: NSTypicalSearch
   fullName: CRMScript.NetServer.NSTypicalSearch
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSTypicalSearch.#ctor
   commentId: M:CRMScript.NetServer.NSTypicalSearch.#ctor
