--- a/docs/api-reference/CRMScript.NetServer.NSTypicalSearches.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTypicalSearches.yml
@@ -19,7 +19,7 @@ items:
   nameWithType: NSTypicalSearches
   fullName: CRMScript.NetServer.NSTypicalSearches
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSTypicalSearches.#ctor
   commentId: M:CRMScript.NetServer.NSTypicalSearches.#ctor
