--- a/docs/api-reference/CRMScript.NetServer.NSUserInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserInfo.yml
@@ -41,7 +41,7 @@ items:
   nameWithType: NSUserInfo
   fullName: CRMScript.NetServer.NSUserInfo
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSUserInfo.#ctor
   commentId: M:CRMScript.NetServer.NSUserInfo.#ctor
