--- a/docs/api-reference/CRMScript.NetServer.NSUserValidationResult.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserValidationResult.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSUserValidationResult
   fullName: CRMScript.NetServer.NSUserValidationResult
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSUserValidationResult.#ctor
   commentId: M:CRMScript.NetServer.NSUserValidationResult.#ctor
