--- a/docs/api-reference/CRMScript.NetServer.NSVisibleFor.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSVisibleFor.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSVisibleFor
   fullName: CRMScript.NetServer.NSVisibleFor
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSVisibleFor.#ctor
   commentId: M:CRMScript.NetServer.NSVisibleFor.#ctor
