--- a/docs/api-reference/CRMScript.Native.Knowledge.yml
+++ b/docs/api-reference/CRMScript.Native.Knowledge.yml
@@ -13,7 +13,7 @@ items:
   nameWithType: Knowledge
   fullName: CRMScript.Native.Knowledge
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.Native.Knowledge.#ctor
   commentId: M:CRMScript.Native.Knowledge.#ctor
