--- a/docs/api-reference/CRMScript.NetServer.NSAttachmentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAttachmentEntity.yml
@@ -23,7 +23,7 @@ items:
   nameWithType: NSAttachmentEntity
   fullName: CRMScript.NetServer.NSAttachmentEntity
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSAttachmentEntity.#ctor
   commentId: M:CRMScript.NetServer.NSAttachmentEntity.#ctor
