--- a/docs/api-reference/CRMScript.NetServer.NSLanguageInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSLanguageInfo.yml
@@ -25,7 +25,7 @@ items:
   nameWithType: NSLanguageInfo
   fullName: CRMScript.NetServer.NSLanguageInfo
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSLanguageInfo.#ctor
   commentId: M:CRMScript.NetServer.NSLanguageInfo.#ctor
