--- a/docs/api-reference/CRMScript.NetServer.NSMailboxEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMailboxEntity.yml
@@ -25,7 +25,7 @@ items:
   nameWithType: NSMailboxEntity
   fullName: CRMScript.NetServer.NSMailboxEntity
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSMailboxEntity.#ctor
   commentId: M:CRMScript.NetServer.NSMailboxEntity.#ctor
