--- a/docs/api-reference/CRMScript.NetServer.NSProjectTypeStatusLink.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProjectTypeStatusLink.yml
@@ -25,7 +25,7 @@ items:
   nameWithType: NSProjectTypeStatusLink
   fullName: CRMScript.NetServer.NSProjectTypeStatusLink
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSProjectTypeStatusLink.#ctor
   commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.#ctor
