--- a/docs/api-reference/CRMScript.NetServer.NSProvidedCredential.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProvidedCredential.yml
@@ -19,7 +19,7 @@ items:
   nameWithType: NSProvidedCredential
   fullName: CRMScript.NetServer.NSProvidedCredential
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSProvidedCredential.#ctor
   commentId: M:CRMScript.NetServer.NSProvidedCredential.#ctor
