--- a/docs/api-reference/CRMScript.NetServer.NSReasonStalled.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReasonStalled.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSReasonStalled
   fullName: CRMScript.NetServer.NSReasonStalled
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSReasonStalled.#ctor
   commentId: M:CRMScript.NetServer.NSReasonStalled.#ctor
