--- a/docs/api-reference/CRMScript.NetServer.NSRelationToOwner.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRelationToOwner.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSRelationToOwner
   fullName: CRMScript.NetServer.NSRelationToOwner
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSRelationToOwner.#ctor
   commentId: M:CRMScript.NetServer.NSRelationToOwner.#ctor
