--- a/docs/api-reference/CRMScript.NetServer.NSReplyTemplate.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReplyTemplate.yml
@@ -19,7 +19,7 @@ items:
   nameWithType: NSReplyTemplate
   fullName: CRMScript.NetServer.NSReplyTemplate
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSReplyTemplate.#ctor
   commentId: M:CRMScript.NetServer.NSReplyTemplate.#ctor
