--- a/docs/api-reference/CRMScript.NetServer.NSRoleEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRoleEntity.yml
@@ -35,7 +35,7 @@ items:
   nameWithType: NSRoleEntity
   fullName: CRMScript.NetServer.NSRoleEntity
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSRoleEntity.#ctor
   commentId: M:CRMScript.NetServer.NSRoleEntity.#ctor
