--- a/docs/api-reference/CRMScript.NetServer.NSSaleStakeholder.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleStakeholder.yml
@@ -49,7 +49,7 @@ items:
   nameWithType: NSSaleStakeholder
   fullName: CRMScript.NetServer.NSSaleStakeholder
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSaleStakeholder.#ctor
   commentId: M:CRMScript.NetServer.NSSaleStakeholder.#ctor
