--- a/docs/api-reference/CRMScript.NetServer.NSSelectionCategory.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSelectionCategory.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSSelectionCategory
   fullName: CRMScript.NetServer.NSSelectionCategory
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSelectionCategory.#ctor
   commentId: M:CRMScript.NetServer.NSSelectionCategory.#ctor
