--- a/docs/api-reference/CRMScript.NetServer.NSSentiment.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSentiment.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSSentiment
   fullName: CRMScript.NetServer.NSSentiment
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSSentiment.#ctor
   commentId: M:CRMScript.NetServer.NSSentiment.#ctor
