--- a/docs/api-reference/CRMScript.NetServer.NSShipmentMessageEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSShipmentMessageEntity.yml
@@ -53,7 +53,7 @@ items:
   nameWithType: NSShipmentMessageEntity
   fullName: CRMScript.NetServer.NSShipmentMessageEntity
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSShipmentMessageEntity.#ctor
   commentId: M:CRMScript.NetServer.NSShipmentMessageEntity.#ctor
