--- a/docs/api-reference/CRMScript.NetServer.NSStatisticsDataSet.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSStatisticsDataSet.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSStatisticsDataSet
   fullName: CRMScript.NetServer.NSStatisticsDataSet
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSStatisticsDataSet.#ctor
   commentId: M:CRMScript.NetServer.NSStatisticsDataSet.#ctor
