--- a/docs/api-reference/CRMScript.NetServer.NSTag.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTag.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSTag
   fullName: CRMScript.NetServer.NSTag
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSTag.#ctor
   commentId: M:CRMScript.NetServer.NSTag.#ctor
