--- a/docs/api-reference/CRMScript.NetServer.NSTicketCategory.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketCategory.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: NSTicketCategory
   fullName: CRMScript.NetServer.NSTicketCategory
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSTicketCategory.#ctor
   commentId: M:CRMScript.NetServer.NSTicketCategory.#ctor
