--- a/docs/api-reference/CRMScript.NetServer.NSWebAppUsage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWebAppUsage.yml
@@ -25,7 +25,7 @@ items:
   nameWithType: NSWebAppUsage
   fullName: CRMScript.NetServer.NSWebAppUsage
   type: Class
-  summary: # TODo."
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSWebAppUsage.#ctor
   commentId: M:CRMScript.NetServer.NSWebAppUsage.#ctor
